--- a/src/Sooda.CodeGen/Sooda.CodeGen.vs2005.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen.vs2005.csproj
@@ -3,14 +3,14 @@
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A6A3FE85-9F3D-4A3D-B8E6-B24771CB3F62}</ProjectGuid>
+    <ProjectGuid>{0D67237B-4FBA-4BD9-95C3-24B5F427D014}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ApplicationIcon>
     </ApplicationIcon>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Sooda.Logging.NLog</AssemblyName>
+    <AssemblyName>Sooda.CodeGen</AssemblyName>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
     <DefaultClientScript>JScript</DefaultClientScript>
@@ -18,7 +18,7 @@
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
     <DelaySign>false</DelaySign>
     <OutputType>Library</OutputType>
-    <RootNamespace>Sooda.Logging.NLog</RootNamespace>
+    <RootNamespace>Sooda.CodeGen</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
@@ -72,21 +72,17 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog">
-      <Name>NLog</Name>
-      <HintPath>..\..\external\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
-    <Reference Include="System.XML">
+    <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include="..\Sooda\Sooda-net-2.0.csproj">
-      <Name>Sooda-net-2.0</Name>
+    <ProjectReference Include="..\Sooda\Sooda.vs2005.csproj">
+      <Name>Sooda.vs2005</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
@@ -98,17 +94,86 @@
     <Compile Include="AssemblySign.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="LoggerWrapper.cs">
+    <Compile Include="CDIL\CDILContext.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="LoggingImplementation.cs">
+    <Compile Include="CDIL\CDILParser.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CDIL\CDILPrettyPrinter.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CDIL\CDILTemplate.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CDIL\CDILToken.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CDIL\CDILTokenizer.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CodeDomClassSkeletonGenerator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CodeDomClassStubGenerator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CodeDomHelpers.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CodeDomListRelationTableGenerator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="CodeGenerator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EmbedSchema.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ExternalProjectInfoCollection.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ICodeGeneratorOutput.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="IProjectFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="NullProjectFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="SoodaCodeGenException.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="SoodaProject.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="VS2005csprojProjectFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="VS2005ProjectFileBase.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="VS2005vbprojProjectFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="VScsprojProjectFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="VSProjectFileBase.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="VSvbprojProjectFile.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="AssemblyBuildInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
+    <PreBuildEvent>"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"</PreBuildEvent>
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
