--- a/src/SoodaFixKeygen/SoodaFixKeygen.vs2005.csproj
+++ b/src/SoodaFixKeygen/SoodaFixKeygen.vs2005.csproj
@@ -1,24 +1,23 @@
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0D67237B-4FBA-4BD9-95C3-24B5F427D014}</ProjectGuid>
+    <ProjectGuid>{74410A3C-F7F5-47FE-8F72-1856753BDD26}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>App.ico</ApplicationIcon>
     <AssemblyKeyContainerName>
     </AssemblyKeyContainerName>
-    <AssemblyName>Sooda.CodeGen</AssemblyName>
+    <AssemblyName>SoodaFixKeygen</AssemblyName>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
     <DefaultClientScript>JScript</DefaultClientScript>
     <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
     <DefaultTargetSchema>IE50</DefaultTargetSchema>
     <DelaySign>false</DelaySign>
-    <OutputType>Library</OutputType>
-    <RootNamespace>Sooda.CodeGen</RootNamespace>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>SoodaFixKeygen</RootNamespace>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
     <StartupObject>
     </StartupObject>
@@ -34,13 +33,14 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>TRACE;DEBUG;VSNET,DOTNET2</DefineConstants>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>1699</NoWarn>
+    <NoWarn>
+    </NoWarn>
     <Optimize>false</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
@@ -56,17 +56,18 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>TRACE;VSNET,DOTNET2</DefineConstants>
+    <DefineConstants>TRACE</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>false</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
-    <NoWarn>1699</NoWarn>
+    <NoWarn>
+    </NoWarn>
     <Optimize>true</Optimize>
     <RegisterForComInterop>false</RegisterForComInterop>
     <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningLevel>4</WarningLevel>
     <DebugType>none</DebugType>
     <ErrorReport>prompt</ErrorReport>
@@ -78,103 +79,29 @@
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
-    <Reference Include="System.Xml">
+    <Reference Include="System.XML">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include="..\Sooda\Sooda-net-2.0.csproj">
-      <Name>Sooda-net-2.0</Name>
+    <ProjectReference Include="..\Sooda\Sooda.vs2005.csproj">
+      <Name>Sooda.vs2005</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App.ico" />
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AssemblySign.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CDIL\CDILContext.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CDIL\CDILParser.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CDIL\CDILPrettyPrinter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CDIL\CDILTemplate.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CDIL\CDILToken.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CDIL\CDILTokenizer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CodeDomClassSkeletonGenerator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CodeDomClassStubGenerator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CodeDomHelpers.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CodeDomListRelationTableGenerator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="CodeGenerator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="EmbedSchema.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ExternalProjectInfoCollection.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ICodeGeneratorOutput.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="IProjectFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="NullProjectFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="SoodaCodeGenException.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="SoodaProject.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VS2005csprojProjectFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VS2005ProjectFileBase.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VS2005vbprojProjectFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VScsprojProjectFile.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VSProjectFileBase.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="VSvbprojProjectFile.cs">
+    <Compile Include="Class1.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="AssemblyBuildInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
+    <PreBuildEvent>"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"</PreBuildEvent>
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
