--- a/src/Sooda.CodeGen/Sooda.CodeGen.vs2005.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen.vs2005.csproj
@@ -171,6 +171,23 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="CDIL\Templates\ClassField.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\DatabaseSchema.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\Factory.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\ListWrapper.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\Loader.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\NullableTypedWrapper.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\Skeleton.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\Stub.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\TypedCollectionWrapper.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\TypedWrapper.cdil" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SoodaProject.xsd">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"</PreBuildEvent>
