--- a/tests/ConsoleTest/ConsoleTest.vs2005.csproj
+++ b/tests/ConsoleTest/ConsoleTest.vs2005.csproj
@@ -91,27 +91,27 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include="..\..\src\Sooda.Logging.NLog\Sooda.Logging.NLog-net-2.0.csproj">
-      <Name>Sooda.Logging.NLog</Name>
+    <ProjectReference Include="..\..\src\Sooda.Logging.NLog\Sooda.Logging.NLog.vs2005.csproj">
+      <Name>Sooda.Logging.NLog.vs2005</Name>
       <Project>{A6A3FE85-9F3D-4A3D-B8E6-B24771CB3F62}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\Sooda\Sooda-net-2.0.csproj">
-      <Name>Sooda</Name>
+    <ProjectReference Include="..\..\src\Sooda\Sooda.vs2005.csproj">
+      <Name>Sooda.vs2005</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
-    <ProjectReference Include="..\BaseObjects\Sooda.UnitTests.BaseObjects-net-2.0.csproj">
+    <ProjectReference Include="..\BaseObjects\Sooda.UnitTests.BaseObjects.vs2005.csproj">
       <Project>{A1D122ED-CF84-4EF0-A138-72922DD50409}</Project>
-      <Name>Sooda.UnitTests.BaseObjects-net-2.0</Name>
+      <Name>Sooda.UnitTests.BaseObjects.vs2005</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TestCases\Sooda.UnitTests.TestCases-net-2.0.csproj">
+    <ProjectReference Include="..\TestCases\Sooda.UnitTests.TestCases.vs2005.csproj">
       <Project>{2DB9451B-8E35-45C3-94E6-32026E9DE8D1}</Project>
-      <Name>Sooda.UnitTests.TestCases-net-2.0</Name>
+      <Name>Sooda.UnitTests.TestCases.vs2005</Name>
     </ProjectReference>
-    <ProjectReference Include="..\UnitTestObjects\Sooda.UnitTests.Objects-net-2.0.csproj">
+    <ProjectReference Include="..\UnitTestObjects\Sooda.UnitTests.Objects.vs2005.csproj">
       <Project>{3574E1EF-2272-4474-85D9-0718B3D452E3}</Project>
-      <Name>Sooda.UnitTests.Objects-net-2.0</Name>
+      <Name>Sooda.UnitTests.Objects.vs2005</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
