--- a/tests/UnitTestObjects/Sooda.UnitTests.Objects.vs2005.csproj
+++ b/tests/UnitTestObjects/Sooda.UnitTests.Objects.vs2005.csproj
@@ -89,13 +89,13 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include="..\..\src\Sooda\Sooda-net-2.0.csproj">
-      <Name>Sooda</Name>
+    <ProjectReference Include="..\..\src\Sooda\Sooda.vs2005.csproj">
+      <Name>Sooda.vs2005</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
-    <ProjectReference Include="..\BaseObjects\Sooda.UnitTests.BaseObjects-net-2.0.csproj">
-      <Name>Sooda.UnitTests.BaseObjects-net-2.0</Name>
+    <ProjectReference Include="..\BaseObjects\Sooda.UnitTests.BaseObjects.vs2005.csproj">
+      <Name>Sooda.UnitTests.BaseObjects.vs2005</Name>
       <Project>{A1D122ED-CF84-4EF0-A138-72922DD50409}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
