--- a/src/SoodaSchemaTool/SoodaSchemaTool.vs2005.csproj
+++ b/src/SoodaSchemaTool/SoodaSchemaTool.vs2005.csproj
@@ -1,11 +1,12 @@
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version='1.0' encoding='utf-8'?>
+<Project DefaultTargets='Build' xmlns='http://schemas.microsoft.com/developer/msbuild/2003'>
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C5E51DAD-B844-4B20-8A84-2D098E75ABAF}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Configuration Condition=' &apos;$(Configuration)&apos; == &apos;&apos; '>Debug</Configuration>
+    <Platform Condition=' &apos;$(Platform)&apos; == &apos;&apos; '>AnyCPU</Platform>
     <ApplicationIcon>
     </ApplicationIcon>
     <AssemblyKeyContainerName>
@@ -27,7 +28,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=' &apos;$(Configuration)|$(Platform)&apos; == &apos;Debug|AnyCPU&apos; '>
     <OutputPath>bin\Debug\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
@@ -51,7 +52,7 @@
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=' &apos;$(Configuration)|$(Platform)&apos; == &apos;Release|AnyCPU&apos; '>
     <OutputPath>bin\Release\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
@@ -76,54 +77,57 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Sooda\Sooda.vs2005.csproj">
+    <ProjectReference Include='..\Sooda\Sooda.vs2005.csproj'>
       <Name>Sooda.vs2005</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
-    <Reference Include="System">
+    <Reference Include='System'>
       <Name>System</Name>
     </Reference>
-    <Reference Include="System.Data">
+    <Reference Include='System.Data'>
       <Name>System.Data</Name>
     </Reference>
-    <Reference Include="System.Xml">
+    <Reference Include='System.Xml'>
       <Name>System.XML</Name>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Command.cs">
+    <Compile Include='Command.cs'>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CommandAttribute.cs">
+    <Compile Include='CommandAttribute.cs'>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CommandGenDDL.cs">
+    <Compile Include='CommandGenDDL.cs'>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CommandHelp.cs">
+    <Compile Include='CommandHelp.cs'>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ConsoleRunner.cs">
+    <Compile Include='ConsoleRunner.cs'>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="CommandFactory.cs" />
-    <Compile Include="CommandGenSchema.cs" />
-    <Compile Include="CommandUpdateSchema.cs" />
-    <Compile Include="ISchemaImporterOptions.cs" />
-    <Compile Include="MSSqlSchemaImporter.cs" />
-    <Compile Include="SchemaExporter.cs">
+    <Compile Include='CommandFactory.cs' />
+    <Compile Include='CommandGenSchema.cs' />
+    <Compile Include='CommandUpdateSchema.cs' />
+    <Compile Include='ISchemaImporterOptions.cs' />
+    <Compile Include='MSSqlSchemaImporter.cs' />
+    <Compile Include='SchemaExporter.cs'>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="SchemaImporter.cs">
+    <Compile Include='SchemaImporter.cs'>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="AssemblyBuildInfo.cs" />
-    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include='AssemblyBuildInfo.cs' />
+    <Compile Include='AssemblyInfo.cs' />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup />
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup />
+  <ItemGroup />
+  <ItemGroup />
+  <Import Project='$(MSBuildBinPath)\Microsoft.CSharp.targets' />
   <PropertyGroup>
     <PreBuildEvent>"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"</PreBuildEvent>
     <PostBuildEvent>
