--- a/src/SoodaStubGen/SoodaStubGen.vs2003.csproj
+++ b/src/SoodaStubGen/SoodaStubGen.vs2003.csproj
@@ -1,29 +1,129 @@
-﻿<?xml version='1.0' encoding='utf-8'?>
-<VisualStudioProject>
-  <CSHARP ProjectType='Local' ProductVersion='7.10.3077' SchemaVersion='2.0' ProjectGuid='{5F89F8D0-39BC-49F8-92E3-3A7F5F3FF55F}'>
-    <Build>
-      <Settings ApplicationIcon='App.ico' AssemblyKeyContainerName='' AssemblyName='SoodaStubGen' AssemblyOriginatorKeyFile='' DefaultClientScript='JScript' DefaultHTMLPageLayout='Grid' DefaultTargetSchema='IE50' DelaySign='false' OutputType='Exe' PreBuildEvent='"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"' PostBuildEvent='' RootNamespace='SoodaStubGen' RunPostBuildEvent='OnBuildSuccess' StartupObject=''>
-        <Config Name='Debug' AllowUnsafeBlocks='false' BaseAddress='285212672' CheckForOverflowUnderflow='false' ConfigurationOverrideFile='' DefineConstants='DEBUG;TRACE' DocumentationFile='' DebugSymbols='true' FileAlignment='4096' IncrementalBuild='false' NoStdLib='false' NoWarn='' Optimize='false' OutputPath='bin\Debug\' RegisterForComInterop='false' RemoveIntegerChecks='false' TreatWarningsAsErrors='true' WarningLevel='4' />
-        <Config Name='Release' AllowUnsafeBlocks='false' BaseAddress='285212672' CheckForOverflowUnderflow='false' ConfigurationOverrideFile='' DefineConstants='TRACE' DocumentationFile='' DebugSymbols='false' FileAlignment='4096' IncrementalBuild='false' NoStdLib='false' NoWarn='' Optimize='true' OutputPath='bin\Release\' RegisterForComInterop='false' RemoveIntegerChecks='false' TreatWarningsAsErrors='true' WarningLevel='4' />
-      </Settings>
-      <References>
-        <Reference Name='System' AssemblyName='System' HintPath='C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.dll' />
-        <Reference Name='System.Data' AssemblyName='System.Data' HintPath='C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Data.dll' />
-        <Reference Name='System.XML' AssemblyName='System.Xml' HintPath='C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll' />
-        <Reference Name='Sooda.CodeGen.vs2003' Project='{0D67237B-4FBA-4BD9-95C3-24B5F427D014}' Package='{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}' />
-        <Reference Name='Sooda.vs2003' Project='{FCC9B644-9093-41F6-8F0D-F98F22474CB5}' Package='{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}' />
-      </References>
-    </Build>
-    <Files>
-      <Include>
-        <File RelPath='App.config' BuildAction='None' />
-        <File RelPath='App.ico' BuildAction='Content' />
-        <File RelPath='AssemblyBuildInfo.cs' SubType='Code' BuildAction='Compile' />
-        <File RelPath='AssemblyInfo.cs' SubType='Code' BuildAction='Compile' />
-        <File RelPath='AssemblySign.cs' SubType='Code' BuildAction='Compile' />
-        <File RelPath='ConsoleCodeGeneratorOutput.cs' SubType='Code' BuildAction='Compile' />
-        <File RelPath='EntryPoint.cs' SubType='Code' BuildAction='Compile' />
-      </Include>
-    </Files>
-  </CSHARP>
+﻿<VisualStudioProject>
+    <CSHARP
+        ProjectType = "Local"
+        ProductVersion = "7.10.3077"
+        SchemaVersion = "2.0"
+        ProjectGuid = "{5F89F8D0-39BC-49F8-92E3-3A7F5F3FF55F}"
+    >
+        <Build>
+            <Settings
+                ApplicationIcon = "App.ico"
+                AssemblyKeyContainerName = ""
+                AssemblyName = "SoodaStubGen"
+                AssemblyOriginatorKeyFile = ""
+                DefaultClientScript = "JScript"
+                DefaultHTMLPageLayout = "Grid"
+                DefaultTargetSchema = "IE50"
+                DelaySign = "false"
+                OutputType = "Exe"
+                PreBuildEvent = '"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"'
+                PostBuildEvent = ""
+                RootNamespace = "SoodaStubGen"
+                RunPostBuildEvent = "OnBuildSuccess"
+                StartupObject = ""
+            >
+                <Config
+                    Name = "Debug"
+                    AllowUnsafeBlocks = "false"
+                    BaseAddress = "285212672"
+                    CheckForOverflowUnderflow = "false"
+                    ConfigurationOverrideFile = ""
+                    DefineConstants = "DEBUG;TRACE"
+                    DocumentationFile = ""
+                    DebugSymbols = "true"
+                    FileAlignment = "4096"
+                    IncrementalBuild = "false"
+                    NoStdLib = "false"
+                    NoWarn = ""
+                    Optimize = "false"
+                    OutputPath = "bin\Debug\"
+                    RegisterForComInterop = "false"
+                    RemoveIntegerChecks = "false"
+                    TreatWarningsAsErrors = "true"
+                    WarningLevel = "4"
+                />
+                <Config
+                    Name = "Release"
+                    AllowUnsafeBlocks = "false"
+                    BaseAddress = "285212672"
+                    CheckForOverflowUnderflow = "false"
+                    ConfigurationOverrideFile = ""
+                    DefineConstants = "TRACE"
+                    DocumentationFile = ""
+                    DebugSymbols = "false"
+                    FileAlignment = "4096"
+                    IncrementalBuild = "false"
+                    NoStdLib = "false"
+                    NoWarn = ""
+                    Optimize = "true"
+                    OutputPath = "bin\Release\"
+                    RegisterForComInterop = "false"
+                    RemoveIntegerChecks = "false"
+                    TreatWarningsAsErrors = "true"
+                    WarningLevel = "4"
+                />
+            </Settings>
+            <References>
+                <Reference
+                    Name = "System"
+                    AssemblyName = "System"
+                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.dll"
+                />
+                <Reference
+                    Name = "System.Data"
+                    AssemblyName = "System.Data"
+                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.Data.dll"
+                />
+                <Reference
+                    Name = "System.XML"
+                    AssemblyName = "System.Xml"
+                    HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
+                />
+                <Reference
+                    Name = "Sooda.CodeGen.vs2003"
+                    Project = "{0D67237B-4FBA-4BD9-95C3-24B5F427D014}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
+                <Reference
+                    Name = "Sooda.vs2003"
+                    Project = "{FCC9B644-9093-41F6-8F0D-F98F22474CB5}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
+            </References>
+        </Build>
+        <Files>
+            <Include>
+                <File
+                    RelPath = "App.ico"
+                    BuildAction = "Content"
+                />
+                <File
+                    RelPath = "AssemblyBuildInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "AssemblyInfo.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "AssemblySign.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "ConsoleCodeGeneratorOutput.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "EntryPoint.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+            </Include>
+        </Files>
+    </CSHARP>
 </VisualStudioProject>
+
