FEATURE: SoodaProcessBoundTransactionStrategy.cs          Process Bound Transaction Strategy - helpful when using Sooda with fat client          to maintain imlicit transaction with GUI thread and lazy loading.

--- a/src/Sooda/Sooda.vs2003.csproj
+++ b/src/Sooda/Sooda.vs2003.csproj
@@ -44,6 +44,7 @@
         <File RelPath='SoodaObjectReflectionBasedFieldValues.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='SoodaObjectsAssemblyAttribute.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='SoodaOrderBy.cs' SubType='Code' BuildAction='Compile' />
+        <File RelPath='SoodaProcessBoundTransactionStrategy.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='SoodaSerializeOptions.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='SoodaSnapshotOptions.cs' SubType='Code' BuildAction='Compile' />
         <File RelPath='SoodaStatistics.cs' SubType='Code' BuildAction='Compile' />
