--- a/src/Sooda/Sooda.vs2005.csproj
+++ b/src/Sooda/Sooda.vs2005.csproj
@@ -711,6 +711,9 @@
     <Compile Include="Utils\QPCStopWatch.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Utils\SqlTypesUtil.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Utils\StopWatch.cs">
       <SubType>Code</SubType>
     </Compile>
