--- a/src/Sooda/Sooda.vs2005.csproj
+++ b/src/Sooda/Sooda.vs2005.csproj
@@ -641,6 +641,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="SoodaObjectReflectionBasedFieldValues.cs" />
+    <Compile Include="SoodaObjectReflectionCachingFieldValues.cs" />
     <Compile Include="SoodaObjectsAssemblyAttribute.cs">
       <SubType>Code</SubType>
     </Compile>
