--- a/src/Sooda/Sooda.vs2008.csproj
+++ b/src/Sooda/Sooda.vs2008.csproj
@@ -643,6 +643,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="SoodaObjectReflectionBasedFieldValues.cs" />
+    <Compile Include="SoodaObjectReflectionCachingFieldValues.cs" />
     <Compile Include="SoodaObjectsAssemblyAttribute.cs">
       <SubType>Code</SubType>
     </Compile>
